<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


        <include
                layout="@layout/main_frame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/home_bottom_nav"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
                android:id="@+id/home_bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:padding="12dp"
                app:bnc_mode="spread"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/navigation_venues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_active="true"
                    app:bt_colorActive="@color/gray900"
                    app:bt_colorInactive="@color/gray400"
                    app:bt_icon="@drawable/ic_picture"
                    app:bt_iconHeight="16dp"
                    app:bt_padding="8dp"
                    app:bt_shape="@drawable/button_curve_16_500"
                    app:bt_title="@string/all"
                    app:bt_titlePadding="2dp"
                    app:layout_constraintEnd_toStartOf="@+id/navigation_searchers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="12dp" />


            <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/navigation_searchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_active="false"
                    app:bt_colorActive="@color/gray900"
                    app:bt_colorInactive="@color/gray400"
                    app:bt_icon="@drawable/ic_face"
                    app:bt_iconHeight="16dp"
                    app:bt_padding="8dp"
                    app:bt_shape="@drawable/button_curve_16_500"
                    app:bt_title="@string/faces"
                    app:bt_titlePadding="2dp"
                    app:layout_constraintEnd_toStartOf="@+id/navigation_bookings"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/navigation_venues"
                    tools:layout_editor_absoluteY="12dp" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/navigation_bookings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_active="false"
                    app:bt_colorActive="@color/gray900"
                    app:bt_colorInactive="@color/gray400"
                    app:bt_icon="@drawable/ic_no_face"
                    app:bt_iconHeight="16dp"
                    app:bt_padding="8dp"
                    app:bt_shape="@drawable/button_curve_16_500"
                    app:bt_title="@string/not_faces"
                    app:bt_titlePadding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/navigation_searchers"
                    tools:layout_editor_absoluteY="13dp" />

            <!-- Add more child items here - max upto 5 -->

        </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
